# Iris-Live

./: .env  README.md  agent.py  main.py  prompts.py  pyproject.toml  speech_to_text.py  text_to_speech.py
tool/: webcam.py
